Fix a los botones del admin
Agregado el dropdown del admin

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -9,7 +9,7 @@ h2{
     background-color: #c92360;
 }
 .btn{
-    padding: .5rem 1.4rem;
+    padding: .7rem 1.4rem;
 }
 button.btn.btn-blanco:hover {
     background: #F8337A;
@@ -79,6 +79,12 @@ button.navbar-toggler {
 }
 .navbar-light .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(180, 96, 99, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+.dropdown-option:hover, .dropdown-option:focus{
+    background: none !important;
+}
+a.text-white:hover, a.text-white:focus {
+    color: #eaeaea !important;
 }
 @media (min-width: 768px){
     .card-propuestas p.card-text {
