--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -104,7 +104,7 @@ a.text-white:hover, a.text-white:focus {
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 1;
-    color: #fff;
+    color: #F8337A;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0);
     opacity: 1;
 }
