--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -217,7 +217,7 @@ a.text-white:hover, a.text-white:focus {
         left: 20%;
     }
     .contenedor-celu video{
-        left: 35px !important;
+        left: 50% !important;
     }
     .play-bt{
         left:45%;
@@ -228,7 +228,8 @@ a.text-white:hover, a.text-white:focus {
 }
 @media (max-width: 450px){
     .contenedor-celu video, .contenedor-celu img{
-        left: 25px;
+        left: 50%;
+        transform: translateX(-50%);
     }
     
 }
