--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -347,23 +347,19 @@ main article header h2 {
 
 /* Counter */
 .counter {
-    background-color:#f5f5f5;
-    padding: 20px 0;
-    border-radius: 5px;
+    padding: 1rem;
 }
 
 .count-title {
     font-size: 40px;
     font-weight: normal;
-    margin-top: 10px;
+    margin-top: 0;
     margin-bottom: 0;
     text-align: center;
 }
 
 .count-text {
-    font-size: 13px;
-    font-weight: normal;
-    margin-top: 10px;
+    margin-top: 16px;
     margin-bottom: 0;
     text-align: center;
 }
